feat: お知らせ機能の実装

--- a/src/stylesheets/util.scss
+++ b/src/stylesheets/util.scss
@@ -48,3 +48,15 @@
     padding-right: #{$i * 5}px;
   }
 }
+
+.u-alignLeft {
+  text-align: left;
+}
+
+.u-alignCenter {
+  text-align: center;
+}
+
+.u-alignRight {
+  text-align: right;
+}
