--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -25,5 +25,9 @@ $mainAnimationDuration: 0.25s;
 
 // z-index
 $zIndexSideMenu: 100;
+$zIndexGlobalNav: 150;
 $zIndexDialog: 200;
 $zIndexFullLoader: 300;
+
+// size
+$navHeight: 50px;
