--- a/src/components/Icon/style.scss
+++ b/src/components/Icon/style.scss
@@ -2,4 +2,20 @@
   font-size: $mainFontSize;
   line-height: 1;
   vertical-align: middle;
+
+  &.-white {
+    color: $whiteColor;
+  }
+
+  &.-gray {
+    color: $grayColor;
+  }
+
+  &.-black {
+    color: $blackColor;
+  }
+
+  &.-green {
+    color: $greenColor;
+  }
 }
