--- a/src/components/Dialog/style.scss
+++ b/src/components/Dialog/style.scss
@@ -39,7 +39,8 @@
 }
 
 .content {
-  padding: 20px 20px;
+  padding: 20px 20px 0;
+  margin-bottom: 20px;
   overflow-x: hidden;
   overflow-y: auto;
   color: $mainTextColor;
