feat: クレジット追加

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -24,6 +24,7 @@ $mainFontFamily: 'Roboto', 'Noto Sans JP', sans-serif;
 $mainAnimationDuration: 0.25s;
 
 // z-index
+$zIndexFAB: 50;
 $zIndexSideMenu: 100;
 $zIndexGlobalNav: 150;
 $zIndexDialog: 200;
