--- a/src/components/FAB/style.scss
+++ b/src/components/FAB/style.scss
@@ -2,6 +2,7 @@
   position: fixed;
   right: 10px;
   bottom: 10px;
+  z-index: $zIndexFAB;
   display: flex;
   flex-direction: column;
   align-items: center;
