--- a/src/views/Home/style.scss
+++ b/src/views/Home/style.scss
@@ -31,6 +31,85 @@ $tmpSideWidth: 250px;
 }
 
 .main {
-  padding: 30px 30px 100px;
+  padding: 30px;
   margin-left: $tmpSideWidth;
+}
+
+.credit {
+  position: relative;
+  padding-top: 150px;
+
+  &::before {
+    position: absolute;
+    top: 75px;
+    left: 50%;
+    display: block;
+    width: 100px;
+    height: 10px;
+    content: '';
+    background-color: $grayColor;
+    transform: translateX(-50%);
+  }
+
+  .creditTitle {
+    margin-bottom: 30px;
+    text-align: center;
+
+    .en {
+      font-size: 30px;
+      font-weight: bold;
+      line-height: 1;
+    }
+
+    .jp {
+      font-size: 14px;
+    }
+  }
+
+  .creditMain {
+    text-align: center;
+  }
+
+  .creditCard {
+    display: inline-flex;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: left;
+    background-color: $whiteColor;
+    box-shadow: rgba($blackColor, 0.1) 0 0 5px 1px;
+  }
+
+  .creditThumb {
+    img {
+      width: 150px;
+    }
+  }
+
+  .creditText {
+    padding: 20px;
+    font-size: 20px;
+
+    .name {
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .role {
+      margin-bottom: 5px;
+      font-size: 12px;
+      line-height: 1.4;
+      color: $grayColor;
+    }
+
+    .link {
+      display: flex;
+      font-size: 12px;
+
+      > li {
+        &:not(:last-child) {
+          margin-right: 5px;
+        }
+      }
+    }
+  }
 }
