--- a/src/views/Home/style.scss
+++ b/src/views/Home/style.scss
@@ -31,24 +31,24 @@ $tmpSideWidth: 250px;
 }
 
 .main {
-  padding: 30px;
+  padding: 30px 30px 0;
   margin-left: $tmpSideWidth;
 }
 
 .credit {
   position: relative;
-  padding-top: 150px;
+  padding-top: 100px;
 
   &::before {
     position: absolute;
-    top: 75px;
+    top: 50px;
     left: 50%;
     display: block;
-    width: 100px;
-    height: 10px;
+    width: 80px;
+    height: 5px;
     content: '';
     background-color: $grayColor;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
   }
 
   .creditTitle {
@@ -81,7 +81,7 @@ $tmpSideWidth: 250px;
 
   .creditThumb {
     img {
-      width: 150px;
+      width: 130px;
     }
   }
 
@@ -90,8 +90,10 @@ $tmpSideWidth: 250px;
     font-size: 20px;
 
     .name {
+      margin-bottom: 8px;
       font-size: 20px;
       font-weight: bold;
+      line-height: 1;
     }
 
     .role {
