--- a/src/views/Home/style.scss
+++ b/src/views/Home/style.scss
@@ -5,20 +5,24 @@ $tmpSideWidth: 250px;
 }
 
 .side {
+  $tmpHeaderHeight: 46px;
+
   position: fixed;
   top: $navHeight;
   bottom: 0;
   left: 0;
   z-index: $zIndexSideMenu;
   width: $tmpSideWidth;
-  overflow-x: hidden;
-  overflow-y: auto;
   background-color: #fff;
 
   .header {
-    position: sticky;
+    position: absolute;
     top: 0;
+    right: 0;
+    left: 0;
     z-index: 1;
+    box-sizing: border-box;
+    height: $tmpHeaderHeight;
     padding: 10px;
     font-size: 16px;
     font-weight: bold;
@@ -26,7 +30,9 @@ $tmpSideWidth: 250px;
   }
 
   .content {
-
+    box-sizing: border-box;
+    height: 100%;
+    padding-top: $tmpHeaderHeight;
   }
 }
 
