--- a/src/views/Home/localComponents/InstanceList/style.scss
+++ b/src/views/Home/localComponents/InstanceList/style.scss
@@ -1,9 +1,13 @@
 .c-instanceList {
+  height: 100%;
+}
 
+.scroller {
+  box-sizing: border-box;
+  height: 100%;
+  padding: 30px 30px 80px;
 }
 
 .item {
-  &:not(:last-child) {
-    margin-bottom: 30px;
-  }
+  padding-bottom: 30px;
 }
