--- a/src/views/Home/style.scss
+++ b/src/views/Home/style.scss
@@ -2,6 +2,7 @@ $tmpSideWidth: 250px;
 
 .c-home {
   position: relative;
+  height: 100%;
 }
 
 .side {
@@ -37,87 +38,7 @@ $tmpSideWidth: 250px;
 }
 
 .main {
-  padding: 30px 30px 0;
+  box-sizing: border-box;
+  height: 100%;
   margin-left: $tmpSideWidth;
-}
-
-.credit {
-  position: relative;
-  padding-top: 100px;
-
-  &::before {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    display: block;
-    width: 80px;
-    height: 5px;
-    content: '';
-    background-color: $grayColor;
-    transform: translate(-50%, -50%);
-  }
-
-  .creditTitle {
-    margin-bottom: 30px;
-    text-align: center;
-
-    .en {
-      font-size: 30px;
-      font-weight: bold;
-      line-height: 1;
-    }
-
-    .jp {
-      font-size: 14px;
-    }
-  }
-
-  .creditMain {
-    text-align: center;
-  }
-
-  .creditCard {
-    display: inline-flex;
-    align-items: flex-start;
-    justify-content: center;
-    text-align: left;
-    background-color: $whiteColor;
-    box-shadow: rgba($blackColor, 0.1) 0 0 5px 1px;
-  }
-
-  .creditThumb {
-    img {
-      width: 130px;
-    }
-  }
-
-  .creditText {
-    padding: 20px;
-    font-size: 20px;
-
-    .name {
-      margin-bottom: 8px;
-      font-size: 20px;
-      font-weight: bold;
-      line-height: 1;
-    }
-
-    .role {
-      margin-bottom: 5px;
-      font-size: 12px;
-      line-height: 1.4;
-      color: $grayColor;
-    }
-
-    .link {
-      display: flex;
-      font-size: 12px;
-
-      > li {
-        &:not(:last-child) {
-          margin-right: 5px;
-        }
-      }
-    }
-  }
 }
