feat: ユーザー一覧でユーザーをクリックした際に表示されるモーダルを借り作成

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -27,6 +27,7 @@ $mainAnimationDuration: 0.25s;
 $zIndexFAB: 50;
 $zIndexSideMenu: 100;
 $zIndexGlobalNav: 150;
+$zIndexInstanceModal: 180;
 $zIndexDialog: 200;
 $zIndexFullLoader: 300;
 
