--- a/src/presentations/views/Home/style.scss
+++ b/src/presentations/views/Home/style.scss
@@ -66,7 +66,10 @@ $tmpSideWidth: 250px;
 
   .instance {
     position: relative;
-    width: 80vw;
-    background-color: $whiteColor;
+    box-sizing: border-box;
+    width: 100%;
+    max-height: 100%;
+    padding: 50px 10vw;
+    overflow-y: auto;
   }
 }
