wip: InstanceStoreをリファクタリング

--- a/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
@@ -5,108 +5,35 @@
   box-shadow: rgba($blackColor, 0.1) 0 0 5px 1px;
 }
 
-.worldInfo {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-  align-items: center;
-  justify-content: center;
-  width: 25%;
+.instanceInfo {
+  flex: 0 0 25%;
+  overflow: hidden;
   background-color: $blackColor;
 
   // TODO: メディアクエリの幅情報、何らかの方法で共通化する
   @media only screen and (max-width: 1300px) {
-    width: 35%;
+    flex-basis: 35%;
   }
 }
 
-.worldImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.tag {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.userNum {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0 10px;
-  font-size: 15px;
-  color: $whiteColor;
-  background-color: rgba($blackColor, 0.8);
-
-  .current {
-    font-size: 20px;
-    line-height: 1.7;
-  }
-
-  .capacity {
-    font-size: 14px;
-  }
-
-  &.-full {
-    background-color: rgba($redColor, 0.8);
-  }
-}
-
-.worldName {
-  position: relative;
-  box-sizing: border-box;
-  max-width: 90%;
-  padding: 10px 15px;
-  overflow: hidden;
-  font-size: 26px;
-  font-weight: bold;
-  color: $whiteColor;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  background-color: rgba($blackColor, 0.9);
-}
-
-.instanceButtonArea {
-  position: absolute;
-  right: 10px;
-  bottom: 15px;
-  left: 10px;
+.loading {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.instanceButtonGroup {
-  display: flex;
-  width: 100%;
-  max-width: 300px;
-  height: 50px;
-  overflow: hidden;
-  background-color: $grayColor;
-  border-radius: 5px;
-  box-shadow: rgba($blackColor, 0.2) 0 0 5px 1px;
-
-  .instanceButtonGroup_item {
-    flex: 1 1 100%;
-
-    &.-watch {
-      flex-basis: 40%;
-    }
-
-    &:not(:last-child) {
-      margin-right: 1px;
-    }
-  }
+.privateTitle {
+  padding: 80px 0;
+  font-size: 30px;
+  font-weight: bold;
+  color: $whiteColor;
+  text-align: center;
 }
 
 .userInfo {
   box-sizing: border-box;
-  width: 100%;
+  flex: 1 1 100%;
 }
