--- a/src/presentations/stylesheets/util.scss
+++ b/src/presentations/stylesheets/util.scss
@@ -60,3 +60,15 @@
 .u-alignRight {
   text-align: right;
 }
+
+.u-spOnly {
+  @include mqPc {
+    display: none;
+  }
+}
+
+.u-pcOnly {
+  @include mqSp {
+    display: none;
+  }
+}
