--- a/src/presentations/stylesheets/variables.scss
+++ b/src/presentations/stylesheets/variables.scss
@@ -25,8 +25,9 @@ $mainAnimationDuration: 0.25s;
 
 // z-index
 $zIndexFAB: 50;
-$zIndexSideMenu: 100;
+$zIndexSideMenuPc: 100;
 $zIndexGlobalNav: 150;
+$zIndexSideMenuSp: 170;
 $zIndexInstanceModal: 180;
 $zIndexDialog: 200;
 $zIndexFullLoader: 300;
