--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserList/style.scss
@@ -10,7 +10,15 @@
   flex: 0 0 16.6666%;
   padding: 5px;
 
-  @media only screen and (max-width: 1300px) {
+  @include mqPcMid {
     flex-basis: 25%;
+  }
+
+  @include mqPcNarrow {
+    flex-basis: 25%;
+  }
+
+  @include mqSp {
+    flex-basis: 33.3333%;
   }
 }
