--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/WorldInfo/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/WorldInfo/style.scss
@@ -51,6 +51,7 @@
   box-sizing: border-box;
   max-width: 90%;
   padding: 10px 15px;
+  margin-bottom: 30px;
   overflow: hidden;
   font-size: 26px;
   font-weight: bold;
