--- a/src/presentations/components/FAB/style.scss
+++ b/src/presentations/components/FAB/style.scss
@@ -1,6 +1,5 @@
 .c-fab {
   position: fixed;
-  right: 25px;
   bottom: 10px;
   z-index: $zIndexFAB;
   display: flex;
@@ -9,14 +8,30 @@
   justify-content: center;
   width: 75px;
   height: 75px;
-  color: $whiteColor;
   cursor: pointer;
-  background-color: $mainColor;
   border-radius: 9999px;
   box-shadow: rgba($blackColor, 0.2) 0 0 5px 1px;
   transition: background-color $mainAnimationDuration;
 
   &:hover {
     background-color: lighten($mainColor, 5);
+  }
+
+  &.-left {
+    left: 10px;
+  }
+
+  &.-right {
+    right: 25px;
+  }
+
+  &.-white {
+    color: $blackColor;
+    background-color: $whiteColor;
+  }
+
+  &.-green {
+    color: $whiteColor;
+    background-color: $greenColor;
   }
 }
