--- a/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
+++ b/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
@@ -6,19 +6,21 @@
   height: 100%;
   overscroll-behavior: none;
 
-  &::before {
-    position: sticky;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1;
-    box-sizing: border-box;
-    display: block;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    content: 'Online Friends';
-    background-color: $paleGrayColor;
+  @include mqPc {
+    &::before {
+      position: sticky;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 1;
+      box-sizing: border-box;
+      display: block;
+      padding: 10px;
+      font-size: 16px;
+      font-weight: bold;
+      content: 'Online Friends';
+      background-color: $paleGrayColor;
+    }
   }
 }
 
