--- a/src/presentations/views/Home/style.scss
+++ b/src/presentations/views/Home/style.scss
@@ -7,16 +7,62 @@ $tmpSideWidth: 250px;
 
 .side {
   position: fixed;
-  top: $navHeight;
   bottom: 0;
   left: 0;
-  z-index: $zIndexSideMenu;
   width: $tmpSideWidth;
-  background-color: #fff;
+
+  @include mqPc {
+    top: $navHeight;
+    z-index: $zIndexSideMenuPc;
+  }
+
+  @include mqSp {
+    top: 0;
+    z-index: $zIndexSideMenuSp;
+
+    &:not(.-visible) {
+      pointer-events: none;
+    }
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba($blackColor, 0.8);
+  transition: opacity $mainAnimationDuration;
+
+  .side:not(.-visible) & {
+    pointer-events: none;
+    opacity: 0;
+  }
+
+  @include mqPc {
+    display: none;
+  }
+}
+
+.content {
+  position: relative;
+  height: 100%;
+  background-color: $whiteColor;
+  transition: transform $mainAnimationDuration;
+
+  @include mqSp {
+    .side:not(.-visible) & {
+      transform: translateX(-100%);
+    }
+  }
 }
 
 .main {
   box-sizing: border-box;
   height: 100%;
-  margin-left: $tmpSideWidth;
+
+  @include mqPc {
+    margin-left: $tmpSideWidth;
+  }
 }
