feat: スワイプでユーザー一覧の表示・非表示を操作できるように

--- a/src/presentations/views/Home/localComponents/InstanceList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceList/style.scss
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   height: 100%;
   padding: 30px 30px 80px;
+
+  // hammer.jsの横スワイプを検知するために必要
+  touch-action: pan-y;
 }
 
 .item {
