feat: スマホ対応のためにメニュー改修

--- a/src/presentations/components/FAB/style.scss
+++ b/src/presentations/components/FAB/style.scss
@@ -22,7 +22,13 @@
   }
 
   &.-right {
+    // スクロールバー分左にずらす
     right: 25px;
+
+    // スマホではスクロールバーないので10px
+    @include mqSp {
+      right: 10px;
+    }
   }
 
   &.-white {
