--- a/src/presentations/App/localComponents/NotificationButton/style.scss
+++ b/src/presentations/App/localComponents/NotificationButton/style.scss
@@ -31,8 +31,8 @@
 .menu {
   position: absolute;
   top: $navHeight - 5px;
-  right: 10px;
-  width: 300px;
+  right: 0;
+  width: 250px;
   color: $mainTextColor;
   background-color: $whiteColor;
   border-radius: 3px;
@@ -40,7 +40,7 @@
 
   &::after {
     position: absolute;
-    right: 25px;
+    right: 7px;
     bottom: 100%;
     display: block;
     width: 0;
