--- a/src/presentations/App/style.scss
+++ b/src/presentations/App/style.scss
@@ -1,4 +1,8 @@
 #app {
+  &.is-pc {
+    font-family: $mainFontFamily;
+  }
+
   .navBar {
     position: fixed;
     top: 0;
@@ -8,7 +12,7 @@
     display: flex;
     align-items: center;
     height: $navHeight;
-    padding: 0 10px;
+    padding: 0 0 0 10px;
     color: $whiteColor;
     background-color: $mainColor;
     box-shadow: rgba($blackColor, 0.2) 0 0 5px 0;
@@ -22,6 +26,11 @@
 
     .spacer {
       flex: 1 1 100%;
+    }
+
+    .iconButton {
+      padding: 10px;
+      cursor: pointer;
     }
   }
 
