--- a/src/presentations/App/localComponents/Menu/style.scss
+++ b/src/presentations/App/localComponents/Menu/style.scss
@@ -42,7 +42,7 @@
     }
 
     .text {
-      margin-left: 5px;
+      margin-left: 10px;
       font-size: 16px;
       line-height: 1.2;
     }
@@ -73,5 +73,39 @@
 
   .settingItem_input {
     flex: 0 0;
+  }
+}
+
+.author {
+  text-align: center;
+
+  .author_image {
+    margin-bottom: 10px;
+
+    img {
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+      border-radius: 9999px;
+    }
+  }
+
+  .author_name {
+    margin-bottom: 5px;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 1;
+  }
+
+  .author_role {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: $grayColor;
+  }
+
+  .author_sns {
+    img {
+      width: 40px;
+    }
   }
 }
