--- a/src/presentations/components/Button/style.module.scss
+++ b/src/presentations/components/Button/style.module.scss
@@ -1,4 +1,4 @@
-.c-button {
+.cButton {
   display: inline-block;
   min-width: 80px;
   padding: 15px;
@@ -14,11 +14,11 @@
     filter: brightness(120%);
   }
 
-  &.-primary {
+  &.primary {
     background-color: $mainColor;
   }
 
-  &.-full {
+  &.full {
     display: block;
   }
 }
