refactor: 色をCSS Variablesで指定するように

--- a/src/presentations/App/style.scss
+++ b/src/presentations/App/style.scss
@@ -13,9 +13,9 @@
     align-items: center;
     height: $navHeight;
     padding: 0 0 0 10px;
-    color: $whiteColor;
-    background-color: $mainColor;
-    box-shadow: rgba($blackColor, 0.2) 0 0 5px 0;
+    color: rgb(var(--whiteColor));
+    background-color: rgb(var(--mainColor));
+    box-shadow: rgba(var(--blackColor), 0.2) 0 0 5px 0;
 
     .appTitle {
       flex: 0 0;
