--- a/src/presentations/components/FAB/style.scss
+++ b/src/presentations/components/FAB/style.scss
@@ -10,12 +10,8 @@
   height: 75px;
   cursor: pointer;
   border-radius: 9999px;
-  box-shadow: rgba($blackColor, 0.2) 0 0 5px 1px;
+  box-shadow: rgba(var(--blackColor), 0.2) 0 0 5px 1px;
   transition: background-color $mainAnimationDuration;
-
-  &:hover {
-    background-color: lighten($mainColor, 5);
-  }
 
   &.-left {
     left: 10px;
@@ -32,12 +28,12 @@
   }
 
   &.-white {
-    color: $blackColor;
-    background-color: $whiteColor;
+    color: rgb(var(--blackColor));
+    background-color: rgb(var(--whiteColor));
   }
 
   &.-green {
-    color: $whiteColor;
-    background-color: $greenColor;
+    color: rgb(var(--whiteColor));
+    background-color: rgb(var(--greenColor));
   }
 }
