--- a/src/presentations/App/localComponents/Menu/style.scss
+++ b/src/presentations/App/localComponents/Menu/style.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba($blackColor, 0.8);
+  background-color: rgba(var(--blackColor), 0.8);
   transition: opacity $mainAnimationDuration;
 
   .c-menu:not(.-active) & {
@@ -22,8 +22,8 @@
   right: 0;
   bottom: 0;
   width: 200px;
-  color: $mainTextColor;
-  background-color: $whiteColor;
+  color: rgb(var(--mainTextColor));
+  background-color: rgb(var(--whiteColor));
   transition: transform $mainAnimationDuration;
 
   .c-menu:not(.-active) & {
@@ -35,10 +35,10 @@
     align-items: center;
     padding: 15px 10px;
     cursor: pointer;
-    border-bottom: 1px solid $paleGrayColor;
+    border-bottom: 1px solid rgb(var(--paleGrayColor));
 
     &:hover {
-      background-color: $paleGrayColor;
+      background-color: rgb(var(--paleGrayColor));
     }
 
     .text {
@@ -68,7 +68,7 @@
 
   .settingItem_note {
     font-size: 12px;
-    color: $grayColor;
+    color: rgb(var(--grayColor));
   }
 
   .settingItem_input {
@@ -100,7 +100,7 @@
   .author_role {
     margin-bottom: 5px;
     font-size: 14px;
-    color: $grayColor;
+    color: rgb(var(--grayColor));
   }
 
   .author_sns {
