--- a/src/presentations/App/localComponents/NotificationButton/style.scss
+++ b/src/presentations/App/localComponents/NotificationButton/style.scss
@@ -23,7 +23,7 @@
     width: 12px;
     height: 12px;
     margin-top: -12px;
-    background-color: $redColor;
+    background-color: rgb(var(--redColor));
     border-radius: 9999px;
   }
 }
@@ -33,10 +33,10 @@
   top: $navHeight - 5px;
   right: 0;
   width: 250px;
-  color: $mainTextColor;
-  background-color: $whiteColor;
+  color: rgb(var(--mainTextColor));
+  background-color: rgb(var(--whiteColor));
   border-radius: 3px;
-  box-shadow: rgba($blackColor, 0.15) 0 0 3px 1px;
+  box-shadow: rgba(var(--blackColor), 0.15) 0 0 3px 1px;
 
   &::after {
     position: absolute;
@@ -46,7 +46,7 @@
     width: 0;
     height: 0;
     content: '';
-    border-color: transparent transparent $whiteColor transparent;
+    border-color: transparent transparent rgb(var(--whiteColor)) transparent;
     border-style: solid;
     border-width: 0 6px 6px 6px;
   }
@@ -62,7 +62,7 @@
     line-height: $mainLineHeight;
 
     &:not(:last-child) {
-      border-bottom: 1px solid $paleGrayColor;
+      border-bottom: 1px solid rgb(var(--paleGrayColor));
     }
   }
 }
