--- a/src/presentations/components/Select/style.scss
+++ b/src/presentations/components/Select/style.scss
@@ -9,7 +9,7 @@
 select {
   padding: 10px 35px 10px 25px;
   cursor: pointer;
-  border: 1px solid $grayColor;
+  border: 1px solid rgb(var(--grayColor));
   border-radius: 3px;
 }
 
