--- a/src/presentations/components/Toggle/style.scss
+++ b/src/presentations/components/Toggle/style.scss
@@ -29,7 +29,7 @@
       width: $tmpInnerSize;
       height: $tmpInnerSize;
       content: '';
-      background: $whiteColor;
+      background: rgb(var(--whiteColor));
       border-radius: 100%;
       box-shadow: rgba(0, 0, 0, 0.25) 0 0 1px 0, rgba(0, 0, 0, 0.15) 0 3px 3px 0;
       transition: left $mainAnimationDuration;
@@ -37,8 +37,8 @@
   }
 
   .input:checked + .body {
-    background-color: $mainColor;
-    border-color: $mainColor;
+    background-color: rgb(var(--mainColor));
+    border-color: rgb(var(--mainColor));
 
     &::before {
       left: $tmpWidth - $tmpInnerSize - $tmpBorderWidth;
