--- a/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
@@ -1,6 +1,6 @@
 .c-instanceListItem {
-  background-color: $whiteColor;
-  box-shadow: rgba($blackColor, 0.1) 0 0 5px 1px;
+  background-color: rgb(var(--whiteColor));
+  box-shadow: rgba(var(--blackColor), 0.1) 0 0 5px 1px;
 
   @include mqPc {
     display: flex;
@@ -13,7 +13,7 @@
 }
 
 .instanceInfo {
-  background-color: $blackColor;
+  background-color: rgb(var(--blackColor));
 
   @include mqPc {
     flex: 0 0 25%;
@@ -46,7 +46,7 @@
   padding: 80px 0;
   font-size: 30px;
   font-weight: bold;
-  color: $whiteColor;
+  color: rgb(var(--whiteColor));
   text-align: center;
 }
 
