--- a/src/presentations/views/Home/localComponents/OnlineFriendsListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/OnlineFriendsListItem/style.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
 
   &:hover {
-    background-color: $paleGrayColor;
+    background-color: rgb(var(--paleGrayColor));
   }
 }
 
@@ -47,9 +47,9 @@
     font-size: 10px;
     font-weight: bold;
     line-height: 17px;
-    color: $whiteColor;
+    color: rgb(var(--whiteColor));
     white-space: nowrap;
-    background-color: $orangeColor;
+    background-color: rgb(var(--orangeColor));
   }
 
   .displayName {
@@ -58,16 +58,16 @@
     line-height: 1.2;
 
     .c-userListItem.-active & {
-      color: $mainColor;
+      color: rgb(var(--mainColor));
     }
   }
 
   .status {
     font-size: 12px;
-    color: $grayColor;
+    color: rgb(var(--grayColor));
 
     &.-canJoin {
-      color: $blueColor;
+      color: rgb(var(--blueColor));
     }
   }
 }
