feat: ワールド情報取得失敗時にエラー表示

--- a/src/presentations/stylesheets/util.scss
+++ b/src/presentations/stylesheets/util.scss
@@ -76,3 +76,15 @@
 .u-interactive {
   cursor: pointer;
 }
+
+.u-block {
+  display: block;
+}
+
+.u-inlineBlock {
+  display: inline-block;
+}
+
+.u-inline {
+  display: inline;
+}
