--- a/src/presentations/App/localComponents/Menu/style.scss
+++ b/src/presentations/App/localComponents/Menu/style.scss
@@ -22,7 +22,7 @@
   right: 0;
   bottom: 0;
   width: 200px;
-  color: rgb(var(--mainTextColor));
+  color: rgb(var(--frontColor));
   background-color: rgb(var(--whiteColor));
   transition: transform $mainAnimationDuration;
 
