--- a/src/presentations/App/localComponents/NotificationButton/style.scss
+++ b/src/presentations/App/localComponents/NotificationButton/style.scss
@@ -33,7 +33,7 @@
   top: $navHeight - 5px;
   right: 0;
   width: 250px;
-  color: rgb(var(--mainTextColor));
+  color: rgb(var(--frontColor));
   background-color: rgb(var(--whiteColor));
   border-radius: 3px;
   box-shadow: rgba(var(--blackColor), 0.15) 0 0 3px 1px;
