--- a/src/presentations/components/Dialog/style.scss
+++ b/src/presentations/components/Dialog/style.scss
@@ -50,7 +50,7 @@
   margin-bottom: 20px;
   overflow-x: hidden;
   overflow-y: auto;
-  color: rgb(var(--mainTextColor));
+  color: rgb(var(--frontColor));
 }
 
 .buttonArea {
