feat: ダークモードのスタイルを作成

--- a/src/presentations/App/base.scss
+++ b/src/presentations/App/base.scss
@@ -18,6 +18,8 @@ a {
 
 #app {
   --blackColor: 0, 0, 0;
+  --paleBlackColor: 0, 0, 0;
+  --trueBlackColor: 0, 0, 0;
   --greenColor: 0, 0, 0;
   --blueColor: 0, 0, 0;
   --redColor: 0, 0, 0;
