--- a/src/presentations/App/localComponents/Menu/style.scss
+++ b/src/presentations/App/localComponents/Menu/style.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(var(--blackColor), 0.8);
+  background-color: rgba(var(--trueBlackColor), 0.8);
   transition: opacity $mainAnimationDuration;
 
   .c-menu:not(.-active) & {
@@ -23,7 +23,7 @@
   bottom: 0;
   width: 200px;
   color: rgb(var(--frontColor));
-  background-color: rgb(var(--whiteColor));
+  background-color: rgb(var(--backColor));
   transition: transform $mainAnimationDuration;
 
   .c-menu:not(.-active) & {
@@ -35,10 +35,10 @@
     align-items: center;
     padding: 15px 10px;
     cursor: pointer;
-    border-bottom: 1px solid rgb(var(--paleGrayColor));
+    border-bottom: 1px solid rgb(var(--weakBackColor));
 
     &:hover {
-      background-color: rgb(var(--paleGrayColor));
+      background-color: rgb(var(--weakBackColor));
     }
 
     .text {
