--- a/src/presentations/components/Dialog/style.scss
+++ b/src/presentations/components/Dialog/style.scss
@@ -15,7 +15,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(var(--blackColor), 0.8);
+  background-color: rgba(var(--trueBlackColor), 0.8);
 }
 
 .body {
@@ -24,7 +24,7 @@
   flex-direction: column;
   max-height: 90vh;
   overflow: hidden;
-  background-color: rgb(var(--whiteColor));
+  background-color: rgb(var(--backColor));
   border-radius: 5px;
 
   @include mqPc {
