refactor: ボタンに色指定を出来るように

--- a/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/style.scss
@@ -12,7 +12,12 @@
 }
 
 .instanceInfo {
-  background-color: rgb(var(--blackColor));
+  background-color: rgb(var(--grayColor));
+
+  &.-private,
+  &.-error {
+    background-color: rgb(var(--blackColor));
+  }
 
   @include mqPc {
     flex: 0 0 25%;
