--- a/src/presentations/App/localComponents/NotificationButton/localComponents/NotificationItem/style.scss
+++ b/src/presentations/App/localComponents/NotificationButton/localComponents/NotificationItem/style.scss
@@ -18,7 +18,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: rgb(var(--paleGrayColor));
+      background-color: rgb(var(--weakBackColor));
     }
   }
 }
