--- a/src/presentations/App/localComponents/NotificationButton/style.scss
+++ b/src/presentations/App/localComponents/NotificationButton/style.scss
@@ -20,11 +20,13 @@
     position: absolute;
     top: 50%;
     left: -1px;
-    width: 12px;
-    height: 12px;
+    width: 13px;
+    height: 13px;
     margin-top: -12px;
     background-color: rgb(var(--redColor));
+    border: 1px solid rgb(var(--whiteColor));
     border-radius: 9999px;
+    box-shadow: rgb(var(--redColor)) 0 0 0 1px;
   }
 }
 
