feat: hoverときのfilter値を共通化

--- a/src/presentations/App/base.scss
+++ b/src/presentations/App/base.scss
@@ -12,7 +12,7 @@ a {
   transition: filter $mainAnimationDuration;
 
   &:hover {
-    filter: brightness(120%);
+    filter: $hoverFilter;
   }
 }
 
