--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/WorldInfo/localComponents/InstanceButton/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/WorldInfo/localComponents/InstanceButton/style.scss
@@ -18,7 +18,7 @@
   transition: filter $mainAnimationDuration;
 
   &:hover {
-    filter: brightness(140%);
+    filter: $hoverFilter;
   }
 
   &.-disabled {
