--- a/src/presentations/components/Button/style.scss
+++ b/src/presentations/components/Button/style.scss
@@ -1,13 +1,14 @@
 .c-button {
   display: inline-block;
   min-width: 80px;
-  padding: 15px;
+  padding: 15px 20px;
   font-size: 16px;
   line-height: 1;
   color: rgb(var(--whiteColor));
   text-align: center;
   cursor: pointer;
   background-color: rgb(var(--grayColor));
+  border-radius: 9999px;
   transition: filter $mainAnimationDuration;
 
   &:hover {
@@ -20,5 +21,10 @@
 
   &.-full {
     display: block;
+  }
+
+  &.-large {
+    padding: 20px 30px;
+    font-size: 18px;
   }
 }
