--- a/src/presentations/components/Dialog/style.scss
+++ b/src/presentations/components/Dialog/style.scss
@@ -47,13 +47,13 @@
 
 .content {
   padding: 20px 20px 0;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   overflow-x: hidden;
   overflow-y: auto;
   color: rgb(var(--frontColor));
 }
 
 .buttonArea {
-  padding: 0 20px 20px;
-  text-align: right;
+  padding: 0 20px 30px;
+  text-align: center;
 }
