--- a/src/presentations/views/Home/localComponents/InstanceList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceList/style.scss
@@ -30,3 +30,19 @@
 .item {
   padding-bottom: 30px;
 }
+
+.toTop {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  width: 100px;
+  margin-left: -50px;
+  text-align: center;
+  cursor: pointer;
+  background-color: rgba(var(--grayColor), 0.8);
+  border-radius: 10px 10px 0 0;
+
+  &:hover {
+    filter: $hoverFilter;
+  }
+}
