--- a/src/presentations/views/Home/localComponents/InstanceList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceList/style.scss
@@ -27,6 +27,28 @@
   }
 }
 
+.filterArea {
+  padding-bottom: 10px;
+  margin-bottom: 50px;
+  border-bottom: 1px solid rgb(var(--grayColor));
+}
+
+.toggleButtonGroup {
+  display: inline-flex;
+  align-items: center;
+  line-height: 0;
+
+  .toggleButtonGroup_toggle {
+    margin-right: 10px;
+  }
+
+  .toggleButtonGroup_label {
+    font-size: 18px;
+    line-height: 1.2;
+    color: rgb(var(--weakFrontColor));
+  }
+}
+
 .item {
   padding-bottom: 30px;
 }
