fix: Windows版Chrome/Firefoxでダークモード時にselectのoptionの背景色と文字色が同じになって見えなくなる問題の修正

--- a/src/presentations/components/Select/style.scss
+++ b/src/presentations/components/Select/style.scss
@@ -3,7 +3,9 @@
   display: inline-block;
   font-size: 20px;
   line-height: 1;
+  color: rgb(var(--frontColor));
   vertical-align: middle;
+  background-color: rgb(var(--backColor));
 }
 
 select {
@@ -11,6 +13,11 @@ select {
   cursor: pointer;
   border: 1px solid rgb(var(--grayColor));
   border-radius: 3px;
+}
+
+option {
+  color: initial;
+  background-color: initial;
 }
 
 .arrow {
