--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
@@ -50,3 +50,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.tmpFavoriteArea {
+  position: absolute;
+  right: 0;
+  bottom: 30px;
+  left: 0;
+}
