--- a/src/presentations/stylesheets/transitions.scss
+++ b/src/presentations/stylesheets/transitions.scss
@@ -17,3 +17,15 @@
 .t-up-leave-to {
   transform: translateY(100%);
 }
+
+.t-scalingFromLeftTop-enter-active,
+.t-scalingFromLeftTop-leave-active {
+  transition: transform $mainAnimationDuration, opacity $mainAnimationDuration;
+  transform-origin: left top;
+}
+
+.t-scalingFromLeftTop-enter,
+.t-scalingFromLeftTop-leave-to {
+  opacity: 0;
+  transform: scale(0);
+}
