--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
@@ -33,7 +33,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 8px 5px;
+  padding: 8px 20px;
   color: rgb(var(--whiteColor));
   text-align: center;
   background-color: rgba(var(--blackColor), 0.8);
@@ -41,19 +41,23 @@
   .c-userListItem.-active & {
     background-color: rgba(var(--mainColor), 0.8);
   }
-}
 
-.displayName {
-  overflow: hidden;
-  font-size: 14px;
-  line-height: 1.2;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
+  .displayName {
+    overflow: hidden;
+    font-size: 14px;
+    line-height: 1.2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
-.tmpFavoriteArea {
-  position: absolute;
-  right: 0;
-  bottom: 30px;
-  left: 0;
+  .menuButton {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 20px;
+    height: 20px;
+    margin-top: -10px;
+    line-height: 0;
+    text-align: center;
+  }
 }
