--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/UserListItem/style.scss
@@ -26,6 +26,19 @@
   position: absolute;
   top: 2px;
   right: 2px;
+
+  .favoriteLoadingSpinner {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 22px;
+    height: 22px;
+    vertical-align: top;
+    background-color: rgb(var(--whiteColor));
+    border-radius: 9999px;
+  }
 }
 
 .userDetail {
