--- a/src/presentations/stylesheets/variables.scss
+++ b/src/presentations/stylesheets/variables.scss
@@ -13,6 +13,7 @@ $zIndexGlobalNav: 150;
 $zIndexSideMenuSp: 170;
 $zIndexInstanceModal: 180;
 $zIndexDialog: 200;
+$zIndexToast: 250;
 $zIndexFullLoader: 300;
 
 // size
