feat: Favoriteの人数上限対策を実装

--- a/src/presentations/components/DropdownMenu/style.scss
+++ b/src/presentations/components/DropdownMenu/style.scss
@@ -17,7 +17,7 @@
 .menu {
   position: absolute;
   z-index: 1;
-  width: 150px;
+  width: 180px;
   background: rgb(var(--backColor));
   box-shadow: rgba(var(--frontColor), 0.1) 0 0 5px 0;
 }
@@ -37,7 +37,8 @@
   }
 
   &.-disabled {
-    color: rgb(var(--weakFrontColor));
+    color: rgb(var(--grayColor));
+    pointer-events: none;
   }
 
   &:hover {
