--- a/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
+++ b/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
@@ -28,3 +28,23 @@
   box-sizing: border-box;
   border-bottom: 1px solid rgb(var(--weakBackColor));
 }
+
+.lastSpacer {
+  height: 50px;
+}
+
+.toTop {
+  position: fixed;
+  bottom: 0;
+  left: 125px;
+  width: 100px;
+  margin-left: -50px;
+  text-align: center;
+  cursor: pointer;
+  background-color: rgba(var(--grayColor), 0.8);
+  border-radius: 10px 10px 0 0;
+
+  &:hover {
+    filter: $hoverFilter;
+  }
+}
