refactor: ToTopButtonをコンポーネント化

--- a/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
+++ b/src/presentations/views/Home/localComponents/OnlineFriendsList/style.scss
@@ -37,14 +37,5 @@
   position: fixed;
   bottom: 0;
   left: 125px;
-  width: 100px;
-  margin-left: -50px;
-  text-align: center;
-  cursor: pointer;
-  background-color: rgba(var(--grayColor), 0.8);
-  border-radius: 10px 10px 0 0;
-
-  &:hover {
-    filter: $hoverFilter;
-  }
+  transform: translateX(-50%);
 }
