refactor: FullLoaderをプラグインやめてStoreで管理

--- a/src/presentations/App/localComponents/FullLoader/style.scss
+++ b/src/presentations/App/localComponents/FullLoader/style.scss
@@ -9,5 +9,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(var(--whiteColor), 0.8);
+  background-color: rgba(var(--trueBlackColor), 0.8);
 }
