--- a/src/presentations/views/Home/localComponents/InstanceList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceList/style.scss
@@ -29,7 +29,7 @@
 
 .filterArea {
   padding-bottom: 10px;
-  margin: 0 30px 50px;
+  margin: 0 30px 35px;
   border-bottom: 1px solid rgb(var(--grayColor));
 }
 
@@ -50,7 +50,7 @@
 }
 
 .item {
-  padding: 0 30px 30px;
+  padding: 15px 30px 15px;
 }
 
 .toTop {
