--- a/src/presentations/views/Home/localComponents/InstanceList/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceList/style.scss
@@ -28,9 +28,16 @@
 }
 
 .filterArea {
-  padding-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   margin: 0 30px 35px;
   border-bottom: 1px solid rgb(var(--grayColor));
+
+  > * {
+    padding-bottom: 10px;
+  }
 }
 
 .toggleButtonGroup {
@@ -46,6 +53,20 @@
     font-size: 18px;
     line-height: 1.2;
     color: rgb(var(--weakFrontColor));
+  }
+}
+
+.sortGroup {
+  display: flex;
+  align-items: center;
+
+  .sortGroup_title {
+    margin-right: 10px;
+    font-size: 20px;
+  }
+
+  .sortGroup_select {
+
   }
 }
 
