--- a/src/presentations/components/ToTopButton/style.scss
+++ b/src/presentations/components/ToTopButton/style.scss
@@ -1,9 +1,13 @@
 .c-toTopButton {
-  width: 100px;
+  box-sizing: border-box;
+  width: 200px;
+  padding: 3px;
+  font-size: 12px;
+  color: rgb(var(--blackColor));
   text-align: center;
   cursor: pointer;
-  background-color: rgba(var(--grayColor), 0.8);
-  border-radius: 10px 10px 0 0;
+  background-color: rgba(var(--grayColor), 0.95);
+  border-radius: 9999px;
 
   &:hover {
     filter: $hoverFilter;
