--- a/src/presentations/components/FavoriteMark/style.scss
+++ b/src/presentations/components/FavoriteMark/style.scss
@@ -1,14 +1,22 @@
 .c-favoriteMark {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 22px;
   height: 22px;
-  line-height: 22px;
   color: rgb(var(--yellowColor));
-  text-align: center;
   background-color: rgb(var(--whiteColor));
   border: 2px solid rgb(var(--yellowColor));
   border-radius: 9999px;
 
   i {
     font-size: 18px;
+  }
+
+  &.-inactive {
+    color: rgb(var(--whiteColor));
+    background-color: rgba(var(--blackColor), 0.25);
+    border: none;
+    opacity: 0.8;
   }
 }
