--- a/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/InstanceDetail/style.scss
+++ b/src/presentations/views/Home/localComponents/InstanceListItem/localComponents/InstanceDetail/style.scss
@@ -6,19 +6,9 @@
   height: 100%;
   background-color: rgb(var(--grayColor));
 
-  &.-private,
-  &.-error {
+  &.-private {
     background-color: rgb(var(--blackColor));
   }
-}
-
-.loading {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
 }
 
 .textOnlyTitle {
