--- a/src/presentations/App/components/HeaderContainerComponent/components/HeaderComponent/components/NotificationButtonComponent/components/NotificationItemComponent/style.module.scss
+++ b/src/presentations/App/components/HeaderContainerComponent/components/HeaderComponent/components/NotificationButtonComponent/components/NotificationItemComponent/style.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../stylesheets/init";
+@import "../../../../../../../../../stylesheets/init";
 
 .root {
   padding: 10px;
