--- a/src/presentations/App/components/HeaderContainerComponent/components/MenuComponent/style.module.scss
+++ b/src/presentations/App/components/HeaderContainerComponent/components/MenuComponent/style.module.scss
@@ -31,6 +31,8 @@
     display: flex;
     align-items: center;
     padding: 15px 10px;
+    color: inherit;
+    text-decoration: none;
     cursor: pointer;
     border-bottom: 1px solid rgb(var(--weakBackColor));
 
